Fixed small design issue where log content would not be clipped by outline.

--- a/RSX-Web-Interface/Website-Files/style.css
+++ b/RSX-Web-Interface/Website-Files/style.css
@@ -131,7 +131,8 @@ body{
     margin: 0.25%;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
+    overflow: clip;
 }
 
 .boxTitleContainer{
@@ -363,8 +364,6 @@ body{
 }
 
 .singleChat{
-    /* margin: 10px;
-    border-radius: 10px; */
     display: flex;
     flex-direction: row;
     align-items: center;
